parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> ( STATEMENT | FUNCLIST ) ?
Rule 2     FUNCLIST -> FUNCDEF FUNCLIST | FUNCDEF
Rule 3     FUNCDEF -> def IDENT OPEN_PAREN PARAMLIST CLOSE_PAREN OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET
Rule 4     PARAMLIST -> ( ( int | float | string ) IDENT COMMA PARAMLIST | ( int | float | string ) IDENT ) ?
Rule 5     STATEMENT -> ( VARDECL SEMICOLON | ATRIBSTAT SEMICOLON | PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )
Rule 6     VARDECL -> ( int | float | string ) IDENT ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *
Rule 7     ATRIBSTAT -> LVALUE ASSIGN ( EXPRESSION | ALLOCEXPRESSION | FUNCCALL )
Rule 8     FUNCCALL -> IDENT OPEN_PAREN PARAMLISTCALL CLOSE_PAREN
Rule 9     PARAMLISTCALL -> ( IDENT COMMA PARAMLISTCALL | IDENT ) ?
Rule 10    PRINTSTAT -> print EXPRESSION
Rule 11    READSTAT -> read LVALUE
Rule 12    RETURNSTAT -> return
Rule 13    IFSTAT -> if OPEN_PAREN EXPRESSION CLOSE_PAREN STATEMENT ( else STATEMENT ) ?
Rule 14    FORSTAT -> for OPEN_PAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT CLOSE_PAREN STATEMENT
Rule 15    STATELIST -> STATEMENT ( STATELIST ) ?
Rule 16    ALLOCEXPRESSION -> new ( int | float | string ) ( OPEN_SQUARE_BRACKET NUMEXPRESSION CLOSE_SQUARE_BRACKET ) +
Rule 17    EXPRESSION -> NUMEXPRESSION ( ( LOWER | HIGHER | LOWER_EQUAL | HIGHER_EQUAL | EQUAL | NOT_EQUAL ) NUMEXPRESSION ) ?
Rule 18    NUMEXPRESSION -> TERM ( ( PLUS | MINUS ) TERM ) *
Rule 19    TERM -> UNARYEXPR ( ( MULTIPLY | DIVIDE | MODULUS ) UNARYEXPR ) *
Rule 20    UNARYEXPR -> ( ( PLUS | MINUS ) ) ? FACTOR
Rule 21    FACTOR -> ( INT_CONSTANT | FLOAT_CONSTANT | STRING_CONSTANT | null | LVALUE | OPEN_PAREN NUMEXPRESSION CLOSE_PAREN )
Rule 22    LVALUE -> IDENT ( OPEN_SQUARE_BRACKET NUMEXPRESSION CLOSE_SQUARE_BRACKET ) *

Terminals, with rules where they appear

(                    : 1 4 4 4 5 6 6 7 9 13 15 16 16 17 17 18 18 19 19 20 20 21 22
)                    : 1 4 4 4 5 6 6 7 9 13 15 16 16 17 17 18 18 19 19 20 20 21 22
*                    : 6 18 19 22
+                    : 16
?                    : 1 4 9 13 15 17 20
ASSIGN               : 7
CLOSE_CURLY_BRACKET  : 3 5
CLOSE_PAREN          : 3 8 13 14 21
CLOSE_SQUARE_BRACKET : 6 16 22
COMMA                : 4 9
DIVIDE               : 19
EQUAL                : 17
FLOAT_CONSTANT       : 21
HIGHER               : 17
HIGHER_EQUAL         : 17
IDENT                : 3 4 4 6 8 9 9 22
INT_CONSTANT         : 6 21
LOWER                : 17
LOWER_EQUAL          : 17
MINUS                : 18 20
MODULUS              : 19
MULTIPLY             : 19
NOT_EQUAL            : 17
OPEN_CURLY_BRACKET   : 3 5
OPEN_PAREN           : 3 8 13 14 21
OPEN_SQUARE_BRACKET  : 6 16 22
PLUS                 : 18 20
SEMICOLON            : 5 5 5 5 5 5 5 14 14
STRING_CONSTANT      : 21
break                : 5
def                  : 3
else                 : 13
error                : 
float                : 4 4 6 16
for                  : 14
if                   : 13
int                  : 4 4 6 16
new                  : 16
null                 : 21
print                : 10
read                 : 11
return               : 12
string               : 4 4 6 16
|                    : 1 2 4 4 4 4 4 5 5 5 5 5 5 5 5 5 6 6 7 7 9 16 16 17 17 17 17 17 18 19 19 20 21 21 21 21 21

Nonterminals, with rules where they appear

ALLOCEXPRESSION      : 7
ATRIBSTAT            : 5 14 14
EXPRESSION           : 7 10 13 14
FACTOR               : 20
FORSTAT              : 5
FUNCCALL             : 7
FUNCDEF              : 2 2
FUNCLIST             : 1 2
IFSTAT               : 5
LVALUE               : 7 11 21
NUMEXPRESSION        : 16 17 17 21 22
PARAMLIST            : 3 4
PARAMLISTCALL        : 8 9
PRINTSTAT            : 5
PROGRAM              : 0
READSTAT             : 5
RETURNSTAT           : 5
STATELIST            : 3 5 15
STATEMENT            : 1 13 13 14 15
TERM                 : 18 18
UNARYEXPR            : 19 19
VARDECL              : 5


state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . ( STATEMENT | FUNCLIST ) ?

    (               shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> ( . STATEMENT | FUNCLIST ) ?
    (5) STATEMENT -> . ( VARDECL SEMICOLON | ATRIBSTAT SEMICOLON | PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )

    (               shift and go to state 3

    STATEMENT                      shift and go to state 4

state 3

    (5) STATEMENT -> ( . VARDECL SEMICOLON | ATRIBSTAT SEMICOLON | PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )
    (6) VARDECL -> . ( int | float | string ) IDENT ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    (               shift and go to state 5

    VARDECL                        shift and go to state 6

state 4

    (1) PROGRAM -> ( STATEMENT . | FUNCLIST ) ?

    |               shift and go to state 7


state 5

    (6) VARDECL -> ( . int | float | string ) IDENT ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    int             shift and go to state 8


state 6

    (5) STATEMENT -> ( VARDECL . SEMICOLON | ATRIBSTAT SEMICOLON | PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )

    SEMICOLON       shift and go to state 9


state 7

    (1) PROGRAM -> ( STATEMENT | . FUNCLIST ) ?
    (2) FUNCLIST -> . FUNCDEF FUNCLIST | FUNCDEF
    (3) FUNCDEF -> . def IDENT OPEN_PAREN PARAMLIST CLOSE_PAREN OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET

    def             shift and go to state 12

    FUNCLIST                       shift and go to state 10
    FUNCDEF                        shift and go to state 11

state 8

    (6) VARDECL -> ( int . | float | string ) IDENT ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    |               shift and go to state 13


state 9

    (5) STATEMENT -> ( VARDECL SEMICOLON . | ATRIBSTAT SEMICOLON | PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )

    |               shift and go to state 14


state 10

    (1) PROGRAM -> ( STATEMENT | FUNCLIST . ) ?

    )               shift and go to state 15


state 11

    (2) FUNCLIST -> FUNCDEF . FUNCLIST | FUNCDEF
    (2) FUNCLIST -> . FUNCDEF FUNCLIST | FUNCDEF
    (3) FUNCDEF -> . def IDENT OPEN_PAREN PARAMLIST CLOSE_PAREN OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET

    def             shift and go to state 12

    FUNCDEF                        shift and go to state 11
    FUNCLIST                       shift and go to state 16

state 12

    (3) FUNCDEF -> def . IDENT OPEN_PAREN PARAMLIST CLOSE_PAREN OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET

    IDENT           shift and go to state 17


state 13

    (6) VARDECL -> ( int | . float | string ) IDENT ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    float           shift and go to state 18


state 14

    (5) STATEMENT -> ( VARDECL SEMICOLON | . ATRIBSTAT SEMICOLON | PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )
    (7) ATRIBSTAT -> . LVALUE ASSIGN ( EXPRESSION | ALLOCEXPRESSION | FUNCCALL )
    (22) LVALUE -> . IDENT ( OPEN_SQUARE_BRACKET NUMEXPRESSION CLOSE_SQUARE_BRACKET ) *

    IDENT           shift and go to state 21

    ATRIBSTAT                      shift and go to state 19
    LVALUE                         shift and go to state 20

state 15

    (1) PROGRAM -> ( STATEMENT | FUNCLIST ) . ?

    ?               shift and go to state 22


state 16

    (2) FUNCLIST -> FUNCDEF FUNCLIST . | FUNCDEF

    |               shift and go to state 23


state 17

    (3) FUNCDEF -> def IDENT . OPEN_PAREN PARAMLIST CLOSE_PAREN OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET

    OPEN_PAREN      shift and go to state 24


state 18

    (6) VARDECL -> ( int | float . | string ) IDENT ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    |               shift and go to state 25


state 19

    (5) STATEMENT -> ( VARDECL SEMICOLON | ATRIBSTAT . SEMICOLON | PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )

    SEMICOLON       shift and go to state 26


state 20

    (7) ATRIBSTAT -> LVALUE . ASSIGN ( EXPRESSION | ALLOCEXPRESSION | FUNCCALL )

    ASSIGN          shift and go to state 27


state 21

    (22) LVALUE -> IDENT . ( OPEN_SQUARE_BRACKET NUMEXPRESSION CLOSE_SQUARE_BRACKET ) *

    (               shift and go to state 28


state 22

    (1) PROGRAM -> ( STATEMENT | FUNCLIST ) ? .

    $end            reduce using rule 1 (PROGRAM -> ( STATEMENT | FUNCLIST ) ? .)


state 23

    (2) FUNCLIST -> FUNCDEF FUNCLIST | . FUNCDEF
    (3) FUNCDEF -> . def IDENT OPEN_PAREN PARAMLIST CLOSE_PAREN OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET

    def             shift and go to state 12

    FUNCDEF                        shift and go to state 29

state 24

    (3) FUNCDEF -> def IDENT OPEN_PAREN . PARAMLIST CLOSE_PAREN OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET
    (4) PARAMLIST -> . ( ( int | float | string ) IDENT COMMA PARAMLIST | ( int | float | string ) IDENT ) ?

    (               shift and go to state 31

    PARAMLIST                      shift and go to state 30

state 25

    (6) VARDECL -> ( int | float | . string ) IDENT ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    string          shift and go to state 32


state 26

    (5) STATEMENT -> ( VARDECL SEMICOLON | ATRIBSTAT SEMICOLON . | PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )

    |               shift and go to state 33


state 27

    (7) ATRIBSTAT -> LVALUE ASSIGN . ( EXPRESSION | ALLOCEXPRESSION | FUNCCALL )

    (               shift and go to state 34


state 28

    (22) LVALUE -> IDENT ( . OPEN_SQUARE_BRACKET NUMEXPRESSION CLOSE_SQUARE_BRACKET ) *

    OPEN_SQUARE_BRACKET shift and go to state 35


state 29

    (2) FUNCLIST -> FUNCDEF FUNCLIST | FUNCDEF .

    )               reduce using rule 2 (FUNCLIST -> FUNCDEF FUNCLIST | FUNCDEF .)
    |               reduce using rule 2 (FUNCLIST -> FUNCDEF FUNCLIST | FUNCDEF .)


state 30

    (3) FUNCDEF -> def IDENT OPEN_PAREN PARAMLIST . CLOSE_PAREN OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET

    CLOSE_PAREN     shift and go to state 36


state 31

    (4) PARAMLIST -> ( . ( int | float | string ) IDENT COMMA PARAMLIST | ( int | float | string ) IDENT ) ?

    (               shift and go to state 37


state 32

    (6) VARDECL -> ( int | float | string . ) IDENT ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    )               shift and go to state 38


state 33

    (5) STATEMENT -> ( VARDECL SEMICOLON | ATRIBSTAT SEMICOLON | . PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )
    (10) PRINTSTAT -> . print EXPRESSION

    print           shift and go to state 40

    PRINTSTAT                      shift and go to state 39

state 34

    (7) ATRIBSTAT -> LVALUE ASSIGN ( . EXPRESSION | ALLOCEXPRESSION | FUNCCALL )
    (17) EXPRESSION -> . NUMEXPRESSION ( ( LOWER | HIGHER | LOWER_EQUAL | HIGHER_EQUAL | EQUAL | NOT_EQUAL ) NUMEXPRESSION ) ?
    (18) NUMEXPRESSION -> . TERM ( ( PLUS | MINUS ) TERM ) *
    (19) TERM -> . UNARYEXPR ( ( MULTIPLY | DIVIDE | MODULUS ) UNARYEXPR ) *
    (20) UNARYEXPR -> . ( ( PLUS | MINUS ) ) ? FACTOR

    (               shift and go to state 41

    EXPRESSION                     shift and go to state 42
    NUMEXPRESSION                  shift and go to state 43
    TERM                           shift and go to state 44
    UNARYEXPR                      shift and go to state 45

state 35

    (22) LVALUE -> IDENT ( OPEN_SQUARE_BRACKET . NUMEXPRESSION CLOSE_SQUARE_BRACKET ) *
    (18) NUMEXPRESSION -> . TERM ( ( PLUS | MINUS ) TERM ) *
    (19) TERM -> . UNARYEXPR ( ( MULTIPLY | DIVIDE | MODULUS ) UNARYEXPR ) *
    (20) UNARYEXPR -> . ( ( PLUS | MINUS ) ) ? FACTOR

    (               shift and go to state 41

    NUMEXPRESSION                  shift and go to state 46
    TERM                           shift and go to state 44
    UNARYEXPR                      shift and go to state 45

state 36

    (3) FUNCDEF -> def IDENT OPEN_PAREN PARAMLIST CLOSE_PAREN . OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET

    OPEN_CURLY_BRACKET shift and go to state 47


state 37

    (4) PARAMLIST -> ( ( . int | float | string ) IDENT COMMA PARAMLIST | ( int | float | string ) IDENT ) ?

    int             shift and go to state 48


state 38

    (6) VARDECL -> ( int | float | string ) . IDENT ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    IDENT           shift and go to state 49


state 39

    (5) STATEMENT -> ( VARDECL SEMICOLON | ATRIBSTAT SEMICOLON | PRINTSTAT . SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )

    SEMICOLON       shift and go to state 50


state 40

    (10) PRINTSTAT -> print . EXPRESSION
    (17) EXPRESSION -> . NUMEXPRESSION ( ( LOWER | HIGHER | LOWER_EQUAL | HIGHER_EQUAL | EQUAL | NOT_EQUAL ) NUMEXPRESSION ) ?
    (18) NUMEXPRESSION -> . TERM ( ( PLUS | MINUS ) TERM ) *
    (19) TERM -> . UNARYEXPR ( ( MULTIPLY | DIVIDE | MODULUS ) UNARYEXPR ) *
    (20) UNARYEXPR -> . ( ( PLUS | MINUS ) ) ? FACTOR

    (               shift and go to state 41

    EXPRESSION                     shift and go to state 51
    NUMEXPRESSION                  shift and go to state 43
    TERM                           shift and go to state 44
    UNARYEXPR                      shift and go to state 45

state 41

    (20) UNARYEXPR -> ( . ( PLUS | MINUS ) ) ? FACTOR

    (               shift and go to state 52


state 42

    (7) ATRIBSTAT -> LVALUE ASSIGN ( EXPRESSION . | ALLOCEXPRESSION | FUNCCALL )

    |               shift and go to state 53


state 43

    (17) EXPRESSION -> NUMEXPRESSION . ( ( LOWER | HIGHER | LOWER_EQUAL | HIGHER_EQUAL | EQUAL | NOT_EQUAL ) NUMEXPRESSION ) ?

    (               shift and go to state 54


state 44

    (18) NUMEXPRESSION -> TERM . ( ( PLUS | MINUS ) TERM ) *

    (               shift and go to state 55


state 45

    (19) TERM -> UNARYEXPR . ( ( MULTIPLY | DIVIDE | MODULUS ) UNARYEXPR ) *

    (               shift and go to state 56


state 46

    (22) LVALUE -> IDENT ( OPEN_SQUARE_BRACKET NUMEXPRESSION . CLOSE_SQUARE_BRACKET ) *

    CLOSE_SQUARE_BRACKET shift and go to state 57


state 47

    (3) FUNCDEF -> def IDENT OPEN_PAREN PARAMLIST CLOSE_PAREN OPEN_CURLY_BRACKET . STATELIST CLOSE_CURLY_BRACKET
    (15) STATELIST -> . STATEMENT ( STATELIST ) ?
    (5) STATEMENT -> . ( VARDECL SEMICOLON | ATRIBSTAT SEMICOLON | PRINTSTAT SEMICOLON | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )

    (               shift and go to state 3

    STATELIST                      shift and go to state 58
    STATEMENT                      shift and go to state 59

state 48

    (4) PARAMLIST -> ( ( int . | float | string ) IDENT COMMA PARAMLIST | ( int | float | string ) IDENT ) ?

    |               shift and go to state 60


state 49

    (6) VARDECL -> ( int | float | string ) IDENT . ( OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    (               shift and go to state 61


state 50

    (5) STATEMENT -> ( VARDECL SEMICOLON | ATRIBSTAT SEMICOLON | PRINTSTAT SEMICOLON . | READSTAT SEMICOLON | RETURNSTAT SEMICOLON | IFSTAT | FORSTAT | OPEN_CURLY_BRACKET STATELIST CLOSE_CURLY_BRACKET | break SEMICOLON | SEMICOLON )

    |               shift and go to state 62


state 51

    (10) PRINTSTAT -> print EXPRESSION .

    SEMICOLON       reduce using rule 10 (PRINTSTAT -> print EXPRESSION .)


state 52

    (20) UNARYEXPR -> ( ( . PLUS | MINUS ) ) ? FACTOR

    PLUS            shift and go to state 63


state 53

    (7) ATRIBSTAT -> LVALUE ASSIGN ( EXPRESSION | . ALLOCEXPRESSION | FUNCCALL )
    (16) ALLOCEXPRESSION -> . new ( int | float | string ) ( OPEN_SQUARE_BRACKET NUMEXPRESSION CLOSE_SQUARE_BRACKET ) +

    new             shift and go to state 65

    ALLOCEXPRESSION                shift and go to state 64

state 54

    (17) EXPRESSION -> NUMEXPRESSION ( . ( LOWER | HIGHER | LOWER_EQUAL | HIGHER_EQUAL | EQUAL | NOT_EQUAL ) NUMEXPRESSION ) ?

    (               shift and go to state 66


state 55

    (18) NUMEXPRESSION -> TERM ( . ( PLUS | MINUS ) TERM ) *

    (               shift and go to state 67


state 56

    (19) TERM -> UNARYEXPR ( . ( MULTIPLY | DIVIDE | MODULUS ) UNARYEXPR ) *

    (               shift and go to state 68


state 57

    (22) LVALUE -> IDENT ( OPEN_SQUARE_BRACKET NUMEXPRESSION CLOSE_SQUARE_BRACKET . ) *

    )               shift and go to state 69


state 58

    (3) FUNCDEF -> def IDENT OPEN_PAREN PARAMLIST CLOSE_PAREN OPEN_CURLY_BRACKET STATELIST . CLOSE_CURLY_BRACKET

    CLOSE_CURLY_BRACKET shift and go to state 70


state 59

    (15) STATELIST -> STATEMENT . ( STATELIST ) ?

    (               shift and go to state 71


state 60

    (4) PARAMLIST -> ( ( int | . float | string ) IDENT COMMA PARAMLIST | ( int | float | string ) IDENT ) ?

    float           shift and go to state 72


state 61

    (6) VARDECL -> ( int | float | string ) IDENT ( . OPEN_SQUARE_BRACKET INT_CONSTANT CLOSE_SQUARE_BRACKET ) *

    OPEN_SQUARE_BRACKET shift and go to state 73


state 62
